--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "typescript": "4.0"
-  }
+  },
+  "packageManager": "yarn@3.2.0"
 }
