--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "next": "latest",
+    "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/node": "^12.12.21",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "typescript": "4.0"
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
+    "@types/react-dom": "^17.0.13",
+    "typescript": "^4.6.2"
   },
   "packageManager": "yarn@3.2.0"
 }
