--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
+    "gitmoji-cli": "^4.9.0",
     "typescript": "^4.6.2"
   },
   "packageManager": "yarn@3.2.0"
