--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Full-stack web application for blogging, built with Next.js",
   "author": "Mohammad Abdul Ahad Chowdhury <ahad@maacpiash.com> (https://www.maacpiash.com)",
   "private": true,
+  "license": "AGPL-3.0-only",
   "scripts": {
     "dev": "next",
     "build": "next build",
