--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "mongodb": "^4.4.1",
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
