--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
   },
   "dependencies": {
     "mongodb": "^4.4.1",
-    "next": "^12.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "next": "^12.1.1",
+    "react": "18.0.0-rc.3",
+    "react-dom": "18.0.0-rc.3"
   },
   "devDependencies": {
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.40",
-    "@types/react-dom": "^17.0.13",
-    "eslint": "^8.11.0",
-    "eslint-config-next": "12.1.0",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
+    "@types/react-dom": "^17.0.14",
+    "eslint": "^8.12.0",
+    "eslint-config-next": "^12.1.1",
     "eslint-config-prettier": "^8.5.0",
-    "gitmoji-cli": "^4.9.0",
-    "typescript": "^4.6.2"
+    "gitmoji-cli": "^4.11.0",
+    "typescript": "^4.6.3"
   },
   "packageManager": "yarn@3.2.0"
 }
