--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "private": true,
   "license": "AGPL-3.0-only",
   "scripts": {
-    "dev": "next",
     "build": "next build",
+    "commit": "gitmoji -c",
+    "dev": "next",
+    "format": "prettier --write .",
     "lint": "next lint",
     "start": "next start",
     "type-check": "tsc"
