➕ Add Mantine dependencies
This includes `core`, `hooks`, and `next`.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@mantine/core": "^4.1.0",
+    "@mantine/hooks": "^4.1.0",
+    "@mantine/next": "^4.1.0",
     "mongodb": "^4.4.1",
     "next": "^12.1.1",
     "react": "^18.0.0",
